--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,14 @@ platform = atmelsam
 board = due
 framework = arduino
 lib_deps = ivanseidel/Thread@0.0.0-alpha+sha.1a4e504c5f
-monitor_speed = 115200
+monitor_speed = 9600
+src_filter =
+    +<*>
+    -<manipulator>
 
-[env:mega]
-board = megaatmega2560
+[env:manipulator]
 platform = atmelavr
+board = uno
 framework = arduino
-lib_deps = ivanseidel/Thread@0.0.0-alpha+sha.1a4e504c5f
-monitor_speed = 115200
+monitor_speed = 9600
+src_filter = +<manipulator>
