--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:due]
+[env:main]
 platform = atmelsam
 board = due
 framework = arduino
@@ -16,6 +16,19 @@ lib_deps = ivanseidel/Thread@0.0.0-alpha+sha.1a4e504c5f
 monitor_speed = 9600
 src_filter =
     +<*>
+    +<core>
+    -<manipulator>
+    -<calibrator>
+
+[env:calibrator]
+platform = atmelsam
+board = due
+framework = arduino
+lib_deps = ivanseidel/Thread@0.0.0-alpha+sha.1a4e504c5f
+monitor_speed = 9600
+src_filter =
+    +<core>
+    +<calibrator>
     -<manipulator>
 
 [env:manipulator]
